# python-grpc-chat

./: .gitignore  README.md  chat_pb2.py  chat_pb2_grpc.py  pyproject.toml
_proto/: chat.proto
chat/: __init__.py  authentication.py  client.py  server.py  session.py  stock.py
helpers/: update_grpc.py
tests/: __init__.py  test_authentication.py  test_session.py  test_stock.py
